<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1.5">

    <EditText
        android:id="@+id/id_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight=".20"
        android:background="@drawable/menu_style"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/id"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight=".20"
        android:background="@drawable/menu_style"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/company_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight=".20"
        android:background="@drawable/menu_style"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/company"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/num_shares_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight=".20"
        android:background="@drawable/menu_style"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/num_shares"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/price_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight=".20"
        android:background="@drawable/menu_style"
        android:ellipsize="start"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/price"
        android:inputType="textPersonName"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:indeterminate="false"
        android:max="25"/>

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:gravity="center_vertical|center_horizontal"/>

    <ImageButton
        android:id="@+id/arrow_image"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.2"
        android:background="@mipmap/ic_new_arrow"
        tools:ignore="ContentDescription,RtlHardcoded"/>

</LinearLayout>