<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/display_style"
              android:ellipsize="start"
              android:orientation="vertical"
              android:weightSum="1">

    <TextView
        android:id="@+id/name_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.06"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="InefficientWeight"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/myColor"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tv_id"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvcom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tv_company"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvsha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tv_shares"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/myColor"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/id_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/company_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/shares_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvprice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tv_price"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvworth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tvworth"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tv_date"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/myColor"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/price_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/worth_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/date_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>

    </TableRow>
</LinearLayout>